--- a/patient.html
+++ b/patient.html
@@ -9,15 +9,13 @@
         <div id = "wrapper">
             <header>
                 <nav>
-                    <form>
-                        <input type="text" placeholder="Search Paients" name="search">
-                        <button type="submit">Q</button>
-                    </form>
-                   <div id = "navItems">
+                    <h1><strong>Dashboard</strong></h1>
+                    <div id = "navItems">
                         <a href = "index.html">Home</a>
                         <a href = "patients.html">Patients</a>
-                   </div>
-                   <div id = "hamburgerMenuBtn">
+                    </div>
+                    <div id = "hamburgerMenuBtn">
+                        <div></div>
                         <div></div>
                         <div></div>
                    </div>
@@ -63,7 +61,7 @@
                         <div id = 'setAppointmentForm'>
                             <label for = 'appointmentDateIn'>Date: </label>
                             <input type = 'date' id = 'appointmentDateIn'>
-                            <label for = 'timeIn'>DOB</label>
+                            <label for = 'timeIn'>Time: </label>
                             <input type = 'time' id = 'timeIn'>
                             <input type = 'submit' id = 'addAppointmentBtn' value = 'Set Appointment' />
                         </div>
