--- a/patients.html
+++ b/patients.html
@@ -9,15 +9,13 @@
         <div id = "wrapper">
             <header>
                 <nav>
-                    <form>
-                        <input type="text" placeholder="Search Paients" name="search">
-                        <button type="submit">Q</button>
-                    </form>
-                   <div id = "navItems">
+                    <h1><strong>Dashboard</strong></h1>
+                    <div id = "navItems">
                         <a href = "index.html">Home</a>
                         <a href = "patients.html">Patients</a>
-                   </div>
-                   <div id = "hamburgerMenuBtn">
+                    </div>
+                    <div id = "hamburgerMenuBtn">
+                        <div></div>
                         <div></div>
                         <div></div>
                    </div>
