fixed several patient

--- a/patient.html
+++ b/patient.html
@@ -34,22 +34,32 @@
                             <h1 class = 'infoValue'></h1>
                         </div>
                         <div id = 'infoBlock'>
-                            <div id = 'info' style = 'color:#605bff;'>
-                                <p> DOB:</p>
-                                <p> Height:</p>
-                                <p> Weight:</p>
-                                <p> Sex:</p>
-                                <p> Number:</p>
-                                <p> Email:</p>
-                                <p> Address:</p>
+                            <div class = 'dataField'>
+                                <label class = 'dataLabel'> DOB </label>
+                                <p class = 'infoValue'></p>
                             </div>
-                            <div id = 'infoValues'>
+                            <div class = 'dataField'>
+                                <label class = 'dataLabel'> Height </label>
                                 <p class = 'infoValue'></p>
+                            </div>
+                            <div class = 'dataField'>
+                                <label class = 'dataLabel'> Weight </label>
                                 <p class = 'infoValue'></p>
+                            </div>
+                            <div class = 'dataField'>
+                                <label class = 'dataLabel'> Sex </label>
                                 <p class = 'infoValue'></p>
+                            </div>  
+                            <div class = 'dataField'>
+                                <label class = 'dataLabel'> Phone</label>
                                 <p class = 'infoValue'></p>
+                            </div>
+                            <div class = 'dataField'>
+                                <label class = 'dataLabel'> Email</label>
                                 <p class = 'infoValue'></p>
-                                <p class = 'infoValue'></p>
+                            </div>
+                            <div class = 'dataField'>
+                                <label class = 'dataLabel'> Address</label>
                                 <p class = 'infoValue'></p>
                             </div>
                         </div>
